# neurolots

./: .gitexternals  .gitignore  .gitlab-ci.yml  .gitsubprojects  .jambs_configs  .jambs_configs.sh  CMakeLists.txt  Changelog.md  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  FindPackages.cmake  FindnvidiaOpenGL.cmake
Fem/: Fem.cpp  Fem.h  Node.cpp  Node.h  Tetrahedron.cpp  Tetrahedron.h
Generators/: CMakeLists.txt  Edges.cpp  Edges.h  GeometricPrimitive.h  Icosphere.cpp  Icosphere.h  NeuronMeshGenerator.cpp  NeuronMeshGenerator.h  Quad.cpp  VectorizedNode.cpp  VectorizedNode.h
examples/: CMakeLists.txt  Cube.h  DemoCallbacks.cpp  DemoCallbacks.h  cubeRender.cpp  cubeRenderer.cpp  meshMeasure.cpp  morphologyExtractor.cpp  morphologyMeasure.cpp  morphologyRenderer.cpp  morphologyStructureRenderer.cpp  objRender.cpp  objRenderTransparency.cpp
examples/shaders/: example.frag  transparency_first_pass.frag  transparency_first_pass.vert  transparency_second_pass.frag  transparency_second_pass.vert
fem/: CMakeLists.txt  Fem.cpp  Fem.h  Node.h
generators/: CMakeLists.txt  Edges.cpp  Edges.h  Icosphere.cpp  Icosphere.h  NeuronMeshGenerator.cpp  NeuronMeshGenerator.h  Quad.h  VectorizedNode.h
neurolots/: CMakeLists.txt  Camera.cpp  Camera.h  Main.cpp  Morphologies.cpp  Morphologies.h  Neuron.cpp  Neuron.h  NeuronMesh.cpp  NeuronMesh.h  NeuronMeshGenerator.cpp  NeuronMeshGenerator.h  NeuronMorphology.cpp  NeuronMorphology.h  NeuronsCollection.cpp  NeuronsCollection.h  Program.cpp  Program.h
neurotessmesh/: CMakeLists.txt  ColorSelectionWidget.cpp  ColorSelectionWidget.h  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  neurotessmesh.cpp
neurotessmesh/ui/: mainwindow.ui
nlfem/: CMakeLists.txt  Fem.cpp  Fem.h  Node.cpp  Node.h  Tetrahedron.cpp  Tetrahedron.h
nlgenerator/: CMakeLists.txt  Edges.cpp  Edges.h  GeometricPrimitive.cpp  GeometricPrimitive.h  Icosphere.cpp  Icosphere.h  JointNode.cpp  JointNode.h  MeshGenerator.cpp  MeshGenerator.h  NeuronMeshGenerator.cpp  NeuronMeshGenerator.h  Quad.cpp  Quad.h  VectorizedNode.cpp  VectorizedNode.h
nlgenerator/tests/: CMakeLists.txt  Icosphere.cpp  Joint.cpp  nlgeneratorTests.h
nlgeometry/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  CMakeLists.txt  Facet.cpp  Facet.h  Mesh.cpp  Mesh.h  OrbitalVertex.cpp  OrbitalVertex.h  SectionQuad.cpp  SectionQuad.h  SpatialHashTable.cpp  SpatialHashTable.h  Vertex.cpp  Vertex.h
nlgeometry/Reader/: ObjReader.cpp  ObjReader.h  ObjReaderTemplated.h
nlgeometry/Writer/: ObjWriter.cpp  ObjWriter.h  OffWriter.cpp  OffWriter.h
nlgeometry/tests/: AxisAlignedBoundingBox.cpp  CMakeLists.txt  Facet.cpp  Mesh.cpp  OrbitalVertex.cpp  SectionQuad.cpp  SpatialHashTable.cpp  Vertex.cpp  nlgeometryTests.h
nlphysics/: CMakeLists.txt  Fem.cpp  Fem.h  Node.cpp  Node.h  Tetrahedron.cpp  Tetrahedron.h
nlphysics/tests/: CMakeLists.txt  Fem.cpp  Node.cpp  Tetrahedron.cpp  nlphysicsTests.h
nlrender/: CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  Morphologies.cpp  Morphologies.h  Neuron.cpp  Neuron.h  NeuronMesh.cpp  NeuronMesh.h  NeuronMorphology.cpp  NeuronMorphology.h  NeuronsCollection.cpp  NeuronsCollection.h  Program.cpp  Program.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Shaders.h
nlrender/tests/: CMakeLists.txt  nlrenderTests.h
qneurolots/: CMakeLists.txt  CMakeSetup.rc  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  qneurolots.cpp
qneurolots/qrc/: resources.qrc
qneurolots/ui/: mainwindow.ui
shaders/: fshader.glsl  gshader.glsl  line.frag  line.vert  quad.frag  quad.geom  quad.tcs  quad.tes  quad.vert  tcshader.glsl  teshader.glsl  transparency.frag  transparency.vert  triangle.frag  triangle.geom  triangle.tcs  triangle.tes  triangle.vert  vshader.glsl
shaders/_functions/: _homogeneousDist.glsl  _illuminate.glsl
shaders/_partials/: _geom.glsl  _homogeneousDist.glsl  _illuminate.glsl  _linearDist.glsl
